.provarCaches/00Df2000001KKNJEA4/objects/Incap311SC__Console_Page_Section_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Incap311SC__Console_Page_Config__c</fullName>
        <label>Console Page Config</label>
        <referenceTo>Incap311SC__Console_Page_Config__mdt</referenceTo>
        <relationshipLabel>Console Page Section Configs</relationshipLabel>
        <relationshipName>Console_Page_Section_Configs</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Custom_Condition__c</fullName>
        <label>Filter Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Object_Name__c</fullName>
        <inlineHelpText>API Name of the object</inlineHelpText>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Settings__c</fullName>
        <label>Console Layout Setting</label>
        <referenceTo>Incap311SC__Console_Layout_Setting__mdt</referenceTo>
        <relationshipLabel>Console Page Section Configs</relationshipLabel>
        <relationshipName>Console_Page_Section_Configs</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Incap311SC__Type__c</fullName>
        <description>e.g. Link,Component</description>
        <inlineHelpText>e.g. Link,Component</inlineHelpText>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Console Page Section Config</label>
    <pluralLabel>Console Page Section Configs</pluralLabel>
</CustomObject>